--- a/src/layouts/MainLayout/MainLayout.css
+++ b/src/layouts/MainLayout/MainLayout.css
@@ -11,6 +11,8 @@
   padding: 120px 40px;
   position: relative;
   overflow: hidden;
+  width: 100%;
+  max-width: 100vw;
 }
 
 .custom-text-background::before {
